# SmallOs

./: .gitignore  Cargo.toml  README.md  workflow
post/: Day1.md  Day2.md  Day3.md  Day4.md  Day5.md  Day6.md
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
