[package]
name = "os"
version = "0.1.0"
authors = ["Mech0n <me3h0n@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.8.0"

[profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
