[package]
name = "os"
version = "0.1.0"
authors = ["Mech0n <me3h0n@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"    # serial ports

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 60          # (in seconds)

[[test]]
name = "should_panic"   # No Harness Tests
harness = false

[[test]]
name = "stack_overflow"
harness = false